antonio_ramos/session-03/exercise-02/mariadb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mariadb
  namespace: exercise-02
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress
        tier: backend
    spec:
      containers:
      - name: mariadb
        image: bitnami/mariadb:latest
        ports:
        - name: mysql-port
          containerPort: 3306
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - "mysqladmin ping -p${MARIADB_PASSWORD}"
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - "mysql -u${MARIADB_USER} -p${MARIADB_PASSWORD} -e \"SELECT 1;\""
          initialDelaySeconds: 60
