antonio_ramos/session-03/exercise-02/wordpress-canary-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress-canary-deployment
  namespace: exercise-02
  labels:
    app: wordpress
    tier: frontend
    track: canary
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - name: wordpress
        image: bitnami/wordpress:4.9.5   		
        ports:
          - name: wordpress
            containerPort: 80
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 20
