antonio_ramos/session-03/exercise-02/mariadb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: exercise-02
  labels:
    app: wordpress
    tier: backend
spec:
  ports:
  - name: mysql-port
    port: 3306
    #targetPort: mysql-port
  selector:
    app: wordpress
    tier: backend
  type: ClusterIP
