antonio_ramos/session-03/exercise-02/wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
  namespace: exercise-02
  labels:
    app: wordpress
    tier: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: wordpress
    tier: frontend
