antonio_ramos/session-03/exercise-02/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: exercise-02
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  rules:
  - host: wordpress-exercise-02.com
    http:
      paths:
      - path: "/"
        backend:
          serviceName: wordpress-svc
          servicePort: 80
