antonio_ramos/session-03/exercise-02/backend-np.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: backend-frontend-access
  namespace: exercise-02
spec:
  podSelector:
    matchLabels:
      app: wordpress
      tier: backend
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: wordpress
          tier: frontend
    ports:
      - protocol: TCP
        port: 3306
